src/test/deca/syntax/invalid/resultats/test42_method-lex.res
'class': [@0,311:315='class',<7>,15:0]
IDENT: [@1,317:317='A',<26>,15:6]
'{': [@2,319:319='{',<36>,15:8]
IDENT: [@3,322:324='int',<26>,16:1]
IDENT: [@4,326:328='fct',<26>,16:5]
'(': [@5,329:329='(',<34>,16:8]
IDENT: [@6,330:332='int',<26>,16:9]
IDENT: [@7,334:334='a',<26>,16:13]
')': [@8,335:335=')',<35>,16:14]
'asm': [@9,339:341='asm',<6>,17:2]
STRING: [@10,343:348='"test"',<47>,17:6]
';': [@11,349:349=';',<39>,17:12]
'}': [@12,351:351='}',<37>,18:0]
